--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "expo": "^35.0.0",
     "expo-blur": "~7.0.0",
     "expo-linear-gradient": "^7.0.0",
@@ -21,7 +22,6 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-sqlite-2": "^3.0.1",
     "react-native-unimodules": "~0.5.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
